--- a/images/index.html
+++ b/images/index.html
@@ -1,10 +1,20 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify - all your favourite music are here</title>
 </head>
+
 <body>
-    
+    <nav>
+        <ul>
+            <li><img src="" alt=""></li>
+            <li>HOME</li>
+            <li>About</li>
+        </ul>
+
+    </nav>
 </body>
+
 </html>
