--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify - all your favourite music are here</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <nav>
         <ul>
-            <li><img src="" alt=""></li>
+            <li class="brand"><img src="images/logo.png" alt=""></li>
             <li>HOME</li>
             <li>About</li>
         </ul>
-
     </nav>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
