--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li class="brand"><img src="images/logo.png" alt="Spotify"></li>
+            <li class="brand"><img src="images/logoS.png" alt="Spotify"></li>
             <li>HOME</li>
             <li>About</li>
         </ul>
