--- a/index.html
+++ b/index.html
@@ -10,13 +10,22 @@
 <body>
     <nav>
         <ul>
-            <li class="brand"><img src="images/logoS.png" alt="Spotify"></li>
+            <li class="brand"><img src="images/logoS.png" alt="Spotify">Spotify</li>
             <li>HOME</li>
             <li>About</li>
         </ul>
     </nav>
 
+    <div class="container">
+        <h1>Best of Chase Atlantic - No Copyright Sounds</h1>
+        <div class="songList"></div>
+        <div class="songBanner"></div>
+    </div>
+
+    <div class="bottom">
+        <input type="range" name="range" id="progressBar" min="0" max="100">
+    </div>
+
     <script src="script.js"></script>
 </body>
-
 </html>
